<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Log">Login</string>
    <string name="psd">Password</string>
    <string name="Loghint">login name</string>
    <string name="Rbtn">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity</string>
    <string name="dialog_title">Warning!</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="buttonChat">Start Chat</string>
    <string name="buttonSend">Send</string>
</resources>
